# mars_ros2

./: .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ros.yml
mars_msgs/: CMakeLists.txt  package.xml
mars_msgs/msg/: ExtCoreState.msg  ExtCoreStateLite.msg  VisionSensorState.msg
mars_ros/: CMakeLists.txt  package.xml
mars_ros/cmake/: mars_libConfig.cmake  staged_mars_libConfig.cmake
mars_ros/include/: mars_msg_conv.h  mars_pose_paramloader.h  mars_wrapper_dualpose.h  mars_wrapper_pose.h
mars_ros/launch/: mars_dualpose_launch.xml  mars_pose_launch.xml
mars_ros/launch/config/: dualpose_config.yaml  pose_config.yaml
mars_ros/src/: mars_node.cpp  mars_wrapper_dualpose.cpp  mars_wrapper_pose.cpp
