<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mars_ros2</name>
  <version>1.0.0</version>
  <description>The mars_ros package, as a wrapper for the Modular and Robust State-Estimation Framework (MaRS).</description>
  <maintainer email="christian.brommer@aau.at">root</maintainer>
  <license>BSD-2-Clause-License with no commercial use allowed. No license in patents is granted.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mars_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>